test_suite/tests/ui/string/derive/unknown_trait.stderr
error: Nutype cannot derive `Bingo is trait.
 --> tests/ui/string/derive/unknown_trait.rs:5:26
  |
5 |     derive(Debug, Clone, Bingo, PartialEq),
  |                          ^^^^^
